progress as of 09_01_22

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/Bryantellius/es6_modules.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Matthew Hasemeier",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Bryantellius/es6_modules/issues"
